<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nameContact"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phoneContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameContact"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/numberContact"
        android:inputType="phone" />

    <Button
        android:id="@+id/birthdayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneContact"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="135dp"
        android:text="@string/insertBirthday" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:onClick="createContact"
        android:text="@string/sendButton" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthdayBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/date" />
</RelativeLayout>