<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/createContact"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:onClick="createNewContact"
        android:text="@string/createContactBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listContacts"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:onClick="listContacts"
        android:text="@string/listarContactos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createContact" />

    <Button
        android:id="@+id/birthdayBtn"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:onClick="buscarCumpleanos"
        android:text="@string/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listContacts" />

</androidx.constraintlayout.widget.ConstraintLayout>